--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&amp;family=Bebas+Neue&amp;display=swap" rel="stylesheet">
   
-  <script src="./_sdk/element_sdk.js"></script>
-  <script src="./_sdk/data_sdk.js"></script>
-  <script src="./_sdk/data_utility.js"></script>
-  <script src="./_sdk/analytics_sdk.js"></script>
+  <script src="_sdk/element_sdk.js"></script>
+  <script src="_sdk/data_sdk.js"></script>
+  <script src="_sdk/data_utility.js"></script>
+  <script src="_sdk/analytics_sdk.js"></script>
   
   <style>
         /* (CSS Styles are kept the same for brevity - Your original styles here) */
